# radar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  ecosystem.config.js  miners.example.json  pyproject.toml  requirements.txt
database/: __init__.py  miner_feedback.py  neuron.py  operator_cli.py  server.py  verify.py
deploy/: Caddyfile
docs/: HIPPIUS_STORAGE.md  MINER_ENVIRONMENT.md  NETWORK_SCHEMAS.md  SUBNET_SETUP_AND_TESTING_GUIDE.md  continuation_training.md  radar-agents.md
local/: README.md  __init__.py  agent.py  artifacts.py  checkpoints.py  continuation.py  dashboard.html  dashboard.py  experiments_api.py  fetch_gift_eval.py  fetch_pretrain.py  miner.py  optimize.py  providers.py  run.py  scoring.py  scratchpad.py  services.py  shards.py  store.py  task.py  trainer.py  validator.py
miner/: cli.py  health_monitor.py  hosting.py  hosting_runpod.py  neuron.py  runpod_lifecycle.py  targon_lifecycle.py
miner_template/: Dockerfile  __init__.py  agent.py  deploy.py  prompts.py  results_client.py
runner/: Dockerfile  _bootstrap.py  _gen_hashes.py  boot_proof.py  entrypoint.sh  handler.py  harness.py  launcher.py  sandbox.py  sandbox_network.sh  sandbox_runner.py  sandbox_wrap.sh  server.py  uploads.py
scripts/: build_trainer_image.sh  create_test_wallets.sh  debug_commitment.py  deploy_db_crunchy.sh  deploy_db_testnet.sh  mock_r2_server.py  multi_node_test.sh  start_pg.sh  test_localnet.sh
shared/: access_logger.py  agent_code.py  artifact_store.py  artifacts.py  auth.py  challenge.py  cognition_wiki.py  commitment.py  database.py  db_client.py  dedup.py  eval_result.py  event_redact.py  gift_eval.py  hippius_client.py  migrations.py  miner_auth.py  pareto.py  peers.py  pg_access_logger.py  pg_events.py  pg_provenance.py  pg_schema.py  pg_store.py  pretrain_data.py  protocol.py  provenance.py  r2_audit.py  runpod_breaker.py  runpod_client.py  scoring.py  sqlite_schema.py  sqlite_store.py  substrate.py  targon_attest.py  targon_breaker.py  targon_client.py  task.py  url_gate.py
tests/: conftest.py  test_access_logger.py  test_agent_code.py  test_agent_code_submit_auth.py  test_agent_harness.py  test_agent_prompt_loader.py  test_agent_token.py  test_artifact_store.py  test_artifacts.py  test_auth_hmac.py  test_bug_fixes.py  test_challenge.py  test_challenge_graph_params.py  test_cli_subcommands.py  test_cognition_wiki.py  test_collection.py  test_commitment.py  test_crps.py  (+100 more)
(+113 files in other folders)
