[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-local"
version = "0.1.0"
description = "Single-laptop validator + miner stack with SQLite broker"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# GEPA prompt optimizer (uses DSPy + an LLM provider).
gepa = ["dspy>=2.4"]

[tool.setuptools.packages.find]
include = ["local*", "shared*", "miner_template*"]
