[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-local"
version = "0.1.0"
description = "Single-laptop validator + miner stack with SQLite broker"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# GEPA prompt optimizer (uses DSPy + an LLM provider).
gepa = ["dspy>=2.4"]
# GIFT-Eval data fetch + Arrow loading (R2/Hippius S3 + parquet/arrow files).
gift_eval = ["boto3>=1.34", "pyarrow>=15.0"]
# Real ts_forecasting task: pretrain on parquet shards + torch eval. Drags
# in torch + the data deps. Skip this extra if you only need synth_regression.
ts_forecasting = [
    "torch>=2.1",
    "boto3>=1.34",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "safetensors>=0.4",
    "httpx>=0.27",
]
# Dependencies for the bundled real miner agents under miners/. All of
# them import torch (FLOPs/shape inference), and the LLM-driving ones
# (claude_style*, openai_sdk*) talk to the validator's OpenAI-compatible
# /llm proxy via the openai SDK.
miners = ["torch>=2.1", "openai>=1.30", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["local*", "shared*", "miner_template*", "miners*", "runner*"]
